Closed
Bug 30866
Opened 26 years ago
Closed 26 years ago
using arrow keys on profile tree crashes
Categories
(SeaMonkey :: Startup & Profiles, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
M14
People
(Reporter: cmaximus, Assigned: hyatt)
Details
(Whiteboard: [PDT+] fix ready w/b minus on 3/10)
Attachments
(1 file)
Overview Description:
Even if you only have one profile, using the arrow key to try and negotiate the profile list (tree) results in an immediate crash on
WinNT.
Steps to Reproduce:
1) Launch mozilla with -ProfileManager unless you have multiple profiles.
2) Click inside the space where the profiles are listed to give it focus (another bug).
3) Hit the down or up arrow a couple times.
Actual Results:
When you try to use the arrows, seamonkey crashes
Expected Results:
Ummm, no crash- scroll through my profiles.
Build Date & Platform Bug Found:
Found with the 2000030709 build on WinNT
Additional Builds and Platforms Tested On:
I also tested a 2000030508 Mac build and did NOT reproduce. This is either new or Win specific.
Additional Information:
I would suspect the static XUL tree. There were bugs like this recently where other such trees were used, I believe hyatt fixed
those cases.
| Reporter | ||
Comment 1•26 years ago
|
||
Nominating for beta1 - how about we don't crash anywhere near startup - it looks really bad.
Keywords: beta1
Updated•26 years ago
|
Whiteboard: [PDT+] w/b minus on 3/10
Comment 2•26 years ago
|
||
[PDT+] w/b minus on 3/10
| Assignee | ||
Comment 4•26 years ago
|
||
I am unable to reproduce. This works fine for me on Windows.
Status: NEW → ASSIGNED
| Reporter | ||
Comment 5•26 years ago
|
||
for real? I crashed several machines whilst trying to get a talkback report for this (unsuccessful). I'd be happy to come crash yours
(or you could watch me crash mine :-)
Comment 6•26 years ago
|
||
I can't reproduce this either, using 30709 build on Win98. We need a
reproducible case, no doubt there is some information needed that is not give
here.
Whiteboard: [PDT+] w/b minus on 3/10 → [PDT+] w/b minus on 3/10: Need Reproducible case
| Assignee | ||
Comment 7•26 years ago
|
||
Maybe it's optimized only?
Comment 8•26 years ago
|
||
reproduced on Win95-sporadically -ie not every time
win error 1st time was in jvm.dll -- every other time kernel32.dll
cannot reproduce on NT, Mac or Linux
| Reporter | ||
Comment 9•26 years ago
|
||
Okay, okay here's the key (props to paulmac for the good eye) -
You must click in the EMPTY whitespace below your profile(s). Clicking on an actual profile will prevent this bug somehow.
So click the whitespace, then try to use the arrows. You will crash immediately, I promise :-)
Whiteboard: [PDT+] w/b minus on 3/10: Need Reproducible case → [PDT+] w/b minus on 3/10
Comment 10•26 years ago
|
||
Okay, I can reproduce on Win98 now too, but how likely is that scenario,
especially since an item is already selected before you click in the whitespace?
This is the kind of bug that QA people find on a slow day, not the kind that
real users encounter in any numbers. Are there any Talkback reports of users
finding this? clearing PDT+ for reconsideration.
Whiteboard: [PDT+] w/b minus on 3/10 → w/b minus on 3/10
Comment 11•26 years ago
|
||
Comment 12•26 years ago
|
||
putting PDT+ because we have a fix. need to make sure to pass the right content
node into nsTreeRowGroupFrame::IndexForRow().
Whiteboard: w/b minus on 3/10 → [PDT+] fix ready w/b minus on 3/10
Comment 13•26 years ago
|
||
This is the kinda bug engineers comment on, on a slow day :-)
waterson - please make sure gbush has your testcase for this. Thanks!
| Assignee | ||
Comment 14•26 years ago
|
||
This bug is MUCH MUCH worse than you think it is. It's very bad and should be
fixed for beta.
Comment 15•26 years ago
|
||
a=jar
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Comment 16•26 years ago
|
||
not able to reproduce again on Win95- looks good in build 2000030909
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•