Bug 30866. Be sure to pass the right content node to nsTreeRowGroupFrame::IndexInRow(). r=hyatt, a=jar